--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "export": "next export"
   },
   "dependencies": {
+    "lucide-react": "^0.544.0",
     "next": "latest",
+    "next-themes": "^0.4.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-swipeable": "^7.0.0"
