--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "export": "next export"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
     "canvas-confetti": "^1.9.3",
     "lucide-react": "^0.544.0",
     "next": "latest",
